see comments in file

--- a/sales.html
+++ b/sales.html
@@ -7,6 +7,7 @@
 <body>
   <title><h2>Sales Page</h2></title>
   <ul>
+    <h2> Imagine a glorious list here</h2>
     <link></link>
     <link></link>
     <link></link>
@@ -15,3 +16,5 @@
   </ul>
 </body>
 </html>
+
+<!---the results from the .js page are supposed to populate and update here, I suspect in a table so they can be tracked by the user. 
