updated with constructor and table

--- a/sales.html
+++ b/sales.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css">
   <title>Daily Sales Projections</title>
   <script src="app.js"></script>
 </head>
 <body>
-  <title><h2>Sales Page</h2></title>
-  <ul>
-    <h2> Imagine a glorious list here</h2>
-    <link></link>
-    <link></link>
-    <link></link>
-    <link></link>
-    <link></link>
-  </ul>
+  <title><h2>Daily Sales</h2></title>
+
+  <section id='a'>
+  <table class="table1">
+    <thead>
+      <tr>
+        <th>Pike</th>
+        <th>Capital Hill</th>
+        <th>SeaTac</th>
+        <th>Alki</th>
+      </tr>
+    </thead>
+  <tbody>
+    <tr>
+    <td>Things</td>
+      <td>shite</td>
+        <td>stuff</td>
+          <td>more things</td>
+  </tr>
+  </tbody>
+</section>
+</table>
 </body>
 </html>
 
-<!---the results from the .js page are supposed to populate and update here, I suspect in a table so they can be tracked by the user. 
+<!---the results from the .js page are supposed to populate and update here, I suspect in a table so they can be tracked by the user.
