--- a/sales.html
+++ b/sales.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html>
-<!---needs more CSS and a dynamic table, it will be grand when I am finished withit-->
 <head>
-  <link rel="stylesheet" type="text/css" href="stylesales.css">
-  <title>daily sales</title>
+  <title> Sales Data </title>
+
+<link rel="stylesheet" type="text/css" href="stylesales.css">
 </head>
-<div class='b'>
-<table id='c'> <h2>Table</h2>
-     <thead id="dynamic-table"> <!--change name before submittal-->
-<thead id= "head">
-  <tr id= 'a'>
+<body>
+<div>
+<table id='table'>
+
+<thead>
+       <h2 id = 'dsd'> Daily Sales Data </h2> <!--get logo on this sheet somehow-->
+          <tr class ='tr'>
                 <th> 6:00AM</th>
                 <th>7:00AM</th>
                 <th>8:00AM</th>
@@ -25,25 +27,145 @@
                 <th>5:00PM</th>
                 <th>7:00PM</th>
                 <th>8:00PM</th>
-      </tr>
+          </tr>
 </thead>
-     <tbody id= 'x'>
-       <tr class= 'y'>Pike</tr>
-        <tr>Alki</tr>
-         <tr>caphill</tr>
-          <tr>Seacenter</tr>
-           <tr class= 'y'>seatac</tr>
 
-     </tbody>
-   </table>
- </div>
-   <script src="app.js" type="text/javascript"></script>
+
+    <tr class='tr'>
+       <td>Pike</td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+       <td></td>
+    </tr>
+
+     <tr class='tr'>
+        <td>Alki</td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+        <td></td>
+      </tr>
+
+      <tr class='tr'>
+         <td>Caphill</td>
+         <<td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+         <td></td>
+       </tr>
+
+       <tr class='tr'>
+          <td>SeaCenter</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+
+        <tr class='tr'>
+           <td>Seatac</td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+           <td></td>
+         </tr>
+
+         <tfoot>
+           <tr class='tr'>
+              <td>Totals</td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+              <td></td>
+
+            </tr>
+
+            <tr class='tr'>
+               <td>Total Sales</td>
+               <td></td>
+
+             </tr>
+          </tfoot>
+
+      </table>
+    </div>
+
+
+
+
+
+
+
+
+
+
  </body>
 
 
 
 
 
- <!--<tr id = "hours">
+
 
 </html>
