--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Front Facing Page Main</title>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <title>Front Facing Page Pats Salmon Cookies</title>
 </head>
-
-<!--there will be ALOT more styling in the next version, I am still sorting out the JS dynamic table process, the concept here is to have a seperate page for each location all with a similare styling but images relevant to the location as well as different fonts.-->
-
-<section id= 'c'></section> <!--images-->
-<section id= 'd'></section> <!--images-->
-
+<link rel="stylesheet" type="text/css" href="style.css">
 <body>
-  <section id= 'a'>
-    <h2>Pats Salmon Cookies!</h2><!--header-with links to locations-->
-  <a href ="index1.html">Pike</a>
-  <a href ="index2.html">Alki</a>
-<a href ="index3.html">Capitol Hill</a>
-<a href ="index5.html">Seattle Center</a>
-<a href ="index4.html">Seatac</a></section>
-<section id= 'b'></section> <!--content-->
-    <h2>What are Salmon cookies?</h2>
-  <P> brief description of how and why pat makes his fish cookies</p>
+
+  <h2>Pats Salmon Cookies</h2>
 
 
-  <h3>Our Story</h3>
-  <p> how and why he came to it, some thoughtfull stuff about loving the area</p>
-</section>
+<!--img needs more work to get it running, the concept is this page with a button that leads to the main page and each locations own page.-->
 
+<img src= "images7/ffpsalmon.jpeg"alt"" title="yummy salmon cookies from the Pacific North West"/>
 </body>
+
 </html>
