changes to html.index

--- a/index.html
+++ b/index.html
@@ -7,11 +7,23 @@
 <body>
 
   <h2>Pats Salmon Cookies</h2>
+  <h2>logo to come</h2>
+  <body>
+<div class= parent>
+  <div class= 'main>'<h3> About Us</h3>
+  <h4><em>is there really fish in those delicious cookies?..</em></h4>
+    <p> Yes! there is loads of fish, local, wild and delicious salmon!
+      it is actually what contributes to the flaky texture! we combine ground salmon with four, coconut oilr
+      barley syrup and nepalese pink salt to make them. These are the healthiest cookies you will ever eat!
 
+      Salmon treats are not new in this area, first nations have been smoking salmon with maple syrup
+      for as long as Sassquatch has been throwing rocks at tourists and eating lone hikers. In fact
+      the locals here call it "Salmon Candy"
 
-<!--img needs more work to get it running, the concept is this page with a button that leads to the main page and each locations own page.-->
-
-<img src= "images7/ffpsalmon.jpeg"alt"" title="yummy salmon cookies from the Pacific North West"/>
+    We decided to push it one step further and make cookies! they make a great compliment to local hoppy ales and coffee
+  the hipsters love them!
+</div>
+</div>
 </body>
 
 </html>
