--- a/sales.html
+++ b/sales.html
@@ -6,11 +6,12 @@
   <title>daily sales</title>
 </head>
 <div class='b'>
-<table id='c'> <h2>Table</h2>
+  <h2>Table</h2>
+<table id='c'>
      <thead id="dynamic-table"> <!--change name before submittal-->
-<thead id= "head">
   <tr id= 'a'>
-                <th> 6:00AM</th>
+                <th></th>
+                <th>6:00AM</th>
                 <th>7:00AM</th>
                 <th>8:00AM</th>
                 <th>9:00AM</th>
@@ -22,18 +23,12 @@
                 <th>3:00PM</th>
                 <th>4:00PM</th>
                 <th> 5:00PM</th>
-                <th>5:00PM</th>
+                <th>6:00PM</th>
                 <th>7:00PM</th>
                 <th>8:00PM</th>
       </tr>
 </thead>
      <tbody id= 'x'>
-       <tr class= 'y'>Pike</tr>
-        <tr>Alki</tr>
-         <tr>caphill</tr>
-          <tr>Seacenter</tr>
-           <tr class= 'y'>seatac</tr>
-
      </tbody>
    </table>
  </div>
@@ -44,6 +39,6 @@
 
 
 
- <!--<tr id = "hours">
+ <!--<tr id = "hours"> -->
 
 </html>
