Got form to work

--- a/sales.html
+++ b/sales.html
@@ -5,6 +5,32 @@
   <link rel="stylesheet" type="text/css" href="stylesales.css">
   <title>daily sales</title>
 </head>
+<body>
+  <h1>Pat's Table of Success</h1>
+  <form id="form">
+      <fieldset>
+        <legend>New Location</legend>
+        <div>
+          <label for="newStore">New Store:</label>
+          <input type="text" name="newStore" value="">
+        </div>
+        <div>
+          <label for="min">Minimum Number of Customers:</label>
+          <input type="text" name="min" value="">
+        </div>
+        <div >
+          <label for="max">Max Number of Customers:</label>
+          <input type="text" name="max" value="">
+        </div>
+        <div class="">
+          <label for="avgc">Average Cookie per Customer:</label>
+          <input type="text" name="avgc" value="">
+        </div>
+        <div>
+          <input type="submit" value="Update">
+        </div>
+      </fieldset>
+  </form>
 <div class='b'>
   <h2>Table</h2>
 <table id='c'>
